[package]
name = "rsp10"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]

[features]
default = ["iron"]
iron = [
    "dep:iron",
    "dep:iron-sessionstorage",
    "dep:persistent",
    "dep:router",
    "dep:urlencoded",
    "dep:mount",
    "dep:staticfile",
    "dep:socket2",
    "dep:rand",
    "dep:hyper",
]

[dependencies]
# Core dependencies (always included)
rsp10-derive = { path = "../rsp10-derive" }
req2struct = { git = "https://github.com/ayourtch/req2struct.git" }
# req2struct = { path = "../req2struct" }

mustache = { git = "https://github.com/ayourtch/rust-mustache" }
chrono = { version = "*", features = ["serde"] }
serde_json = "*"
serde = "*"
serde_derive = "*"
log = "*"
env_logger = "*"

# Iron-specific dependencies (optional)
iron = { version = "*", optional = true }
persistent = { version = "*", optional = true }
iron-sessionstorage = { git = "https://github.com/ayourtch/iron-sessionstorage.git", optional = true }
socket2 = { version = "*", features = ["all"], optional = true }
hyper = { version = "*", optional = true }
rand = { version = "0.6", optional = true }
urlencoded = { version = "*", optional = true }
router = { version = "*", optional = true }
mount = { version = "*", optional = true }
staticfile = { version = "*", optional = true }

# Database dependencies (kept for now, can be made optional later)
diesel = { version = "1.1.*", features = ["postgres", "sqlite", "huge-tables", "chrono"] }
r2d2 = "*"
r2d2-diesel = "*"

# Utility dependencies
regex = "*"
lazy_static = "*"
arrayref = "*"
base64 = "*"
num_cpus = "*"
dotenv = "*"



